updated personal statement

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                 </div>
                 <article class="paragraph">
                     <p>
-                        Im a full stack develeper from Kennebunk Maine and I cant wait to start my career in web development 
+                        Hi! My Name is Hunter Zandri, Im a full stack develeper from Kennebunk Maine and I cant wait to start my career in web development. I Have experince using HTML,CSS, Javascript,
+                        Currently i'm a production manager at an engineering startup located in Biddeford Maine, We specialize in building high purioty gas delivery systems for the Semiconductor Industry.
+                    
                     </p>
                 </article>
             </div>
